다크모드 삭제

--- a/src/App.scss
+++ b/src/App.scss
@@ -82,23 +82,23 @@
 
   @media (prefers-color-scheme: dark) {
 
-    --text-black: #000;
-    --text-white: #fff;
+    // --text-black: #000;
+    // --text-white: #fff;
 
-    --const-black: #000;
-    --const-white: #fff;
+    // --const-black: #000;
+    // --const-white: #fff;
 
-    --gray-50: #f3f3f3;
-    --gray-100: #e6e6e6;
-    --gray-200: #cccccc;
-    --gray-300: #b3b3b3;
-    --gray-400: #999999;
-    --gray-500: #808080;
-    --gray-600: #666666;
-    --gray-700: #4d4d4d;
-    --gray-800: #333333;
-    --gray-900: #1a1a1a;
-    --gray-1000: #000000;
+    // --gray-50: #f3f3f3;
+    // --gray-100: #e6e6e6;
+    // --gray-200: #cccccc;
+    // --gray-300: #b3b3b3;
+    // --gray-400: #999999;
+    // --gray-500: #808080;
+    // --gray-600: #666666;
+    // --gray-700: #4d4d4d;
+    // --gray-800: #333333;
+    // --gray-900: #1a1a1a;
+    // --gray-1000: #000000;
 
     --card-background: var(--gray-900);
     --card-border: var(--gray-700);
